kubernetes/home/external/overseerr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ingress
  namespace: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`request.oplabs.us`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
      middlewares:
        - name: default-headers
  tls:
    secretName: oplabs-us-tls
